[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ballchasing_client"
readme = "README.rst"
version = "0.0.1"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
    'jsonpath-ng',
    'requests',
    'pandas',
    "python-dateutil",
]

[project.scripts]
extract-monthly = "ballchasing_client.scripts.extract_daily:main()"